@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
   mainModule = 'com.example.huskysheet'
-  mainClass = 'com.example.huskysheet.HelloApplication'
+  mainClass = 'com.example.huskysheet.MainApplication'
 }
 
 javafx {
@@ -35,7 +35,6 @@ javafx {
 }
 
 dependencies {
-
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
   testImplementation 'org.mockito:mockito-core:4.8.0'
@@ -43,13 +42,16 @@ dependencies {
   testImplementation 'org.mockito:mockito-inline:4.8.0'
   testImplementation 'net.bytebuddy:byte-buddy:1.12.7'
   testImplementation 'net.bytebuddy:byte-buddy-agent:1.12.7'
+  implementation 'org.glassfish.jersey.core:jersey-server:2.34'
+  implementation 'org.glassfish.jersey.containers:jersey-container-servlet:2.34'
+  implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.34'
+  implementation 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 test {
   useJUnitPlatform()
   jvmArgs += "-Dnet.bytebuddy.experimental=true"
 }
-
 
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
@@ -61,4 +63,15 @@ jlink {
 
 jlinkZip {
   group = 'distribution'
+}
+
+java {
+  modularity.inferModulePath = true
+}
+
+run {
+  jvmArgs += [
+          '--add-modules', 'javafx.controls,javafx.fxml,java.sql,java.datatransfer,java.desktop,java.ws.rs,jersey.server,jersey.container.servlet.core,javax.servlet.api',
+          '--module-path', sourceSets.main.runtimeClasspath.asPath
+  ]
 }
